--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,9 +2,8 @@
 <html lang="en-US">
   <head>
     <link rel="stylesheet" href="/static/css/style.css">
-    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <script src="/static/js/htmx.min.js"></script>
-    <title>feilong</title>
+    <title>RE:feilong</title>
   </head>
   <body hx-boost="true">
     <div id="page">
