fix contact/ broken linkg

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
           on platforms like HTB and Root-Me.
         </p>
         <p>
-          <a href="/contact/"
+          <a href="mailto:huynhjeanpierre@hotmail.com"
             hx-target="main"
             hx-select="main"
             hx-swap="outerHTML">
