--- a/static/sass/_general.scss
+++ b/static/sass/_general.scss
@@ -1,5 +1,5 @@
 body {
-  font-family: FiraCode Nerd Font Mono;
+  font-family: FantasqueSansM Nerd Font Mono;
   margin: 0px;
   background-color: $dark0;
   display: flex;
