--- a/static/sass/_home.scss
+++ b/static/sass/_home.scss
@@ -5,7 +5,7 @@
   aspect-ratio: 2;
   display: flex;
   padding: 20px;
-  font-family: FiraCode Nerd Font Mono;
+  font-family: FantasqueSansM Nerd Font Mono;
 }
 
 #card #info {
