--- a/static/sass/_fonts.scss
+++ b/static/sass/_fonts.scss
@@ -1,50 +1,50 @@
 @font-face {
   font-family: 'Roboto';
   font-style: italic;
-  src: url(../fonts/Roboto-Italic.ttf) format('ttf');
+  src: url(../fonts/Roboto-Italic.ttf) format('truetype');
 }
 
 @font-face {
   font-family: 'Roboto';
   font-weight: normal;
-  src: url(../fonts/Roboto-Regular.ttf) format('ttf');
+  src: url(../fonts/Roboto-Regular.ttf) format('truetype');
 }
 
 @font-face {
   font-family: 'Roboto';
   font-weight: bold;
-  src: url(../fonts/Roboto-Bold.ttf) format('ttf');
+  src: url(../fonts/Roboto-Bold.ttf) format('truetype');
 }
 
 @font-face {
   font-family: 'Roboto';
   font-weight: bold;
   font-style: italic;
-  src: url(../fonts/Roboto-BoldItalic.ttf) format('ttf');
+  src: url(../fonts/Roboto-BoldItalic.ttf) format('truetype');
 }
 
 @font-face {
-  font-family: 'FantasqueSansM Nerd Font';
+  font-family: 'FantasqueSansM Nerd Font Mono';
   font-style: italic;
-  src: url(../fonts/FantasqueSansMNerdFontMono-Italic.ttf) format('ttf');
+  src: url(../fonts/FantasqueSansMNerdFontMono-Italic.ttf) format('truetype');
 }
 
 @font-face {
-  font-family: 'FantasqueSansM Nerd Font';
+  font-family: 'FantasqueSansM Nerd Font Mono';
   font-weight: normal;
-  src: url(../fonts/FantasqueSansMNerdFontMono-Regular.ttf) format('ttf');
+  src: url(../fonts/FantasqueSansMNerdFontMono-Regular.ttf) format('truetype');
 }
 
 @font-face {
-  font-family: 'FantasqueSansM Nerd Font';
+  font-family: 'FantasqueSansM Nerd Font Mono';
   font-weight: bold;
-  src: url(../fonts/FantasqueSansMNerdFontMono-Bold.ttf) format('ttf');
+  src: url(../fonts/FantasqueSansMNerdFontMono-Bold.ttf) format('truetype');
 }
 
 @font-face {
-  font-family: 'FantasqueSansM Nerd Font';
+  font-family: 'FantasqueSansM Nerd Font Mono';
   font-weight: bold;
   font-style: italic;
-  src: url(../fonts/FantasqueSansMNerdFontMono-BoldItalic.ttf) format('ttf');
+  src: url(../fonts/FantasqueSansMNerdFontMono-BoldItalic.ttf) format('truetype');
 }
 
