--- a/static/css/style.css
+++ b/static/css/style.css
@@ -52,9 +52,9 @@ body {
   width: 100vw;
 }
 
-@media only screen and (min-width: 1280px) {
+@media only screen and (min-width: 768px) {
   #page {
-    width: 800px;
+    max-width: 768px;
   }
 }
 h1, h2, h3 {
