--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,6 +3,8 @@
   <head>
     <link rel="stylesheet" href="/static/css/style.css">
     <script src="/static/js/htmx.min.js"></script>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
     <title>RE:feilong</title>
   </head>
   <body hx-boost="true">
