--- a/static/css/style.css
+++ b/static/css/style.css
@@ -49,12 +49,12 @@ body {
 }
 
 #page {
-  width: 100vw;
+  max-width: 768px;
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (max-width: 768px) {
   #page {
-    max-width: 768px;
+    width: 100vw;
   }
 }
 h1, h2, h3 {
@@ -188,6 +188,18 @@ main a:hover {
   margin: 1rem;
 }
 
+@media only screen and (max-width: 768px) {
+  #card {
+    flex-direction: column;
+    text-align: justify;
+  }
+  #card #info {
+    order: 2;
+  }
+  #card #profile {
+    order: 1;
+  }
+}
 figure {
   margin: unset;
   display: flex;
