--- a/static/sass/_colors.scss
+++ b/static/sass/_colors.scss
@@ -31,3 +31,7 @@ $neutral_blue:   #458588;
 $neutral_purple: #b16286;
 $neutral_aqua:   #689d6a;
 $neutral_orange: #d65d0e;
+
+.bright-red {
+  color: $bright_red;
+}
