--- a/templates/blog.html
+++ b/templates/blog.html
@@ -8,6 +8,9 @@
   {% for post in posts %}
     <small>{{ post.date }}</small>
     <a href="{{ url_for('post', name=post.path.replace('posts/', '')) }}"
+       hx-target="main"
+       hx-select="main"
+       hx-swap="outerHTML show:window:top"
     >{{ post.title }}</a>
   {% endfor %}
 
