--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,10 +1,10 @@
 <footer>
   <div>
-  <small>Made with love by Jean Pierre Huynh.</small>
+    <small>Made with <span class="bright-red"></span> by Jean Pierre Huynh. 
+      <a target="_blank" href="https://github.com/jeanmadao/homepage">Source Code</a></small>
   </div>
   <div id="socials">
     <a target="_blank" href="https://github.com/jeanmadao">󰊤</a>
     <a target="_blank" href="https://www.linkedin.com/in/jean-pierre-huynh/">󰌻</a>
-
   </div>
 </footer>
