--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
     <div id="photo">
     </div>
     <figcaption>
-      source: <a href="https://nitorisasami.com/">@nitorisasami</a>
+      source: <a target="_blank" href="https://nitorisasami.com/">@nitorisasami</a>
     </figcaption>
   </figure>
 </div>
