--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,7 +1,7 @@
 <nav>
-  <h1><a href="/" hx-target="main" hx-select="main" hx-swap="outerHTML">RE:feilong</a></h1>
+  <h1><a href="/" hx-target="main" hx-select="main" hx-swap="outerHTML show:window:top">RE:feilong</a></h1>
   <ul>
-    <li><a href="/" hx-target="main" hx-select="main" hx-swap="outerHTML">/home</a></li>
-    <li><a href="/blog" hx-target="main" hx-select="main" hx-swap="outerHTML">/blog</a></li>
+    <li><a href="/" hx-target="main" hx-select="main" hx-swap="outerHTML show:window:top">/home</a></li>
+    <li><a href="/blog" hx-target="main" hx-select="main" hx-swap="outerHTML show:window:top">/blog</a></li>
   </ul>
 </nav>
