--- a/static/sass/_post.scss
+++ b/static/sass/_post.scss
@@ -1,6 +1,9 @@
-#publication-date {
+#publication-info {
   background-color: $dark0_hard;
   padding: 0.5rem 1rem;
   font-weight: bold;
 }
 
+pre {
+  padding: 1rem;
+}
