--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html lang="en-US">
   <head>
-    <link rel="stylesheet" href="/static/css/style.css">
     <script src="/static/js/htmx.min.js"></script>
+    <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="stylesheet" href="{{ url_for('pygments_css') }}">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>RE:feilong</title>
