new blog post dropped!!!

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -237,7 +237,7 @@ figcaption {
 }
 
 #publication-info {
-  background-color: #1d2021;
+  background-color: #504945;
   padding: 0.5rem 1rem;
   font-weight: bold;
 }
