--- a/static/sass/_post.scss
+++ b/static/sass/_post.scss
@@ -1,5 +1,5 @@
 #publication-info {
-  background-color: $dark0_hard;
+  background-color: $dark2;
   padding: 0.5rem 1rem;
   font-weight: bold;
 }
