--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,6 +4,7 @@
     <script src="/static/js/htmx.min.js"></script>
     <link rel="stylesheet" href="/static/css/style.css">
     <link rel="stylesheet" href="{{ url_for('pygments_css') }}">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>RE:feilong</title>
