fix hover on phone probably

--- a/static/sass/_main.scss
+++ b/static/sass/_main.scss
@@ -13,6 +13,7 @@ main h1 {
 
 main a {
   color: $bright_blue;
+  background-color: unset;
   padding: 0.2rem;
   text-decoration: unset;
   font-weight: bold;
