use :active to fix :hover on phone

--- a/static/sass/_footer.scss
+++ b/static/sass/_footer.scss
@@ -16,10 +16,19 @@ footer a:hover {
   color: $dark0;
 }
 
+footer a:active {
+  background-color: unset;
+  color: $light1;
+}
+
 #socials a {
   text-decoration: unset;
   font-size: 2rem;
 }
 #socials a:hover {
   color: $light0;
+}
+
+#socials a:active {
+  color: unset;
 }
