--- a/static/css/style.css
+++ b/static/css/style.css
@@ -119,6 +119,11 @@ nav a:hover {
   color: #282828;
 }
 
+nav a:active {
+  background-color: unset;
+  color: unset;
+}
+
 #banner {
   min-height: 5rem;
   background-color: #3c3836;
@@ -156,6 +161,11 @@ main a {
 main a:hover {
   color: #ebdbb2;
   background-color: #83a598;
+}
+
+main a:active {
+  color: #83a598;
+  background-color: unset;
 }
 
 #content {
@@ -267,6 +277,11 @@ footer a:hover {
   color: #282828;
 }
 
+footer a:active {
+  background-color: unset;
+  color: #ebdbb2;
+}
+
 #socials a {
   text-decoration: unset;
   font-size: 2rem;
@@ -274,6 +289,10 @@ footer a:hover {
 
 #socials a:hover {
   color: #fbf1c7;
+}
+
+#socials a:active {
+  color: unset;
 }
 
 /*# sourceMappingURL=style.css.map */
