Jean Huynh I guess...

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,6 +1,6 @@
 <footer>
   <div>
-    <small>Made with <span class="bright-red"></span> by Jean Pierre Huynh. 
+    <small>Made with <span class="bright-red"></span> by Jean Huynh. 
       <a target="_blank" href="https://github.com/jeanmadao/homepage">Source Code</a></small>
   </div>
   <div id="socials">
