--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 <div id="card">
   <div id="info">
     <h2 id="name">
-      Jean Pierre Huynh
+      Jean Huynh
     </h2>
     <div id="description">
       <p>Hello!</p>
