--- a/static/sass/_main.scss
+++ b/static/sass/_main.scss
@@ -19,7 +19,7 @@ main h3, h4, h4 {
 }
 
 main a {
-  // color: $bright_orange;
+  color: $bright_orange;
   color: $light1;
   font-weight: bold;
 }
