--- a/templates/index.html
+++ b/templates/index.html
@@ -11,12 +11,15 @@
     <div id="description">
       <p>Hello!</p>
       <p>
-        I'm a Cybersecurity Expert specialized in Reverse Engineering,
+        I'm an aspiring Cybersecurity Expert in Reverse Engineering,
         Malware Analysis and Pentesting.
       </p>
       <p>
         I like to hone my skills by participating in CTFs and doing challenges
-        on platforms like HTB and Root-Me.
+        on platforms like
+        <a target="_blank" href="https://www.root-me.org/feilong">Root-Me</a>.
+        When I have free time, I like to work on personal open source project, like
+        <a target="_blank" href="https://github.com/jeanmadao/hexcess">hexcess</a>.
       </p>
       <p>
         <a href="mailto:huynhjeanpierre@hotmail.com"
@@ -32,7 +35,8 @@
     <div id="photo">
     </div>
     <figcaption>
-      source: <a target="_blank" href="https://nitorisasami.com/">@nitorisasami</a>
+      source:
+      <a target="_blank" href="https://nitorisasami.com/">@nitorisasami</a>
     </figcaption>
   </figure>
 </div>
