--- a/static/sass/_general.scss
+++ b/static/sass/_general.scss
@@ -16,7 +16,7 @@ body {
   }
 }
 
-h1, h2, h3 {
+h1, h2, h3, h4 {
   margin: unset;
 }
 
@@ -34,4 +34,8 @@ h4 {
 
 hr {
   color: $bright_green;
+}
+
+ol, ul {
+  padding-left: 1rem;
 }
