new email address!

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,12 +22,9 @@
         <a target="_blank" href="https://github.com/jeanmadao/hexcess">hexcess</a>.
       </p>
       <p>
-        <a href="mailto:huynhjeanpierre@hotmail.com"
-          hx-target="main"
-          hx-select="main"
-          hx-swap="outerHTML">
-            Let's get in touch!
-        </a>
+      <a href="mailto:jeanpierrehuynh@proton.me">
+        Let's get in touch!
+      </a>
       </p>
     </div>
   </div>
