--- a/static/sass/_post.scss
+++ b/static/sass/_post.scss
@@ -20,3 +20,11 @@ iframe {
   }
 
 }
+
+blockquote {
+  background-color: $dark0_soft;
+  border-radius: 10px;
+  padding: 1rem;
+  margin: 1rem;
+  font-style: italic;
+}
